@@ -34,15 +34,16 @@ namespace Avogadro {
   class A_EXPORT GLWidget;
 
   /**
-   * @class Camera
+   * @class Camera camera.h <avogadro/camera.h>
+   * @brief Representation of the camera looking at the molecule.
    * @author Benoit Jacob
    *
    * This class represents a camera looking at the molecule loaded
    * in a GLWidget. It stores the parameters describing the camera and
-   * a pointer to the parent GLWidget. It uses it to retrieve information
+   * a pointer to the parent GLWidget. It uses this to retrieve information
    * about the molecule being looked at, automatically setting up the OpenGL
-   * projection matrix to ensure that the molecule won't be clipped. It also
-   * provides a method to initialize a nice default viewpoint on the molecule.
+   * projection matrix to ensure that the molecule will not be clipped. It also
+   * provides a method to initialize a nice default viewpoint of the molecule.
    * In order to setup the OpenGL matrices before rendering the molecule, do the
    * following:
    * @code
@@ -56,8 +57,8 @@ namespace Avogadro {
     glLoadIdentity();
     camera.applyModelview();
    * @endcode
-   * The reason why class Camera doesn't provide a single method to do all of this
-   * is that in some cases, you don't want to. For instance, when doing OpenGL selection,
+   * The reason why Camera class does not provide a single method to do all of this
+   * is that in some cases you don't want to. For instance, when doing OpenGL selection,
    * you want to call gluPickMatrix() right before Camera::applyPerspective().
    */
   class CameraPrivate;
@@ -65,7 +66,7 @@ namespace Avogadro {
   {
     protected:
       friend class GLWidget;
-      /** sets which GLWidget owns this camera.
+      /** Sets which GLWidget owns this camera.
         * @sa parent() */
       void setParent(const GLWidget *glwidget);
 
@@ -83,6 +84,8 @@ namespace Avogadro {
 
     public:
       /** The constructor.
+        * @param parent the GLWidget parent of this camera instance.
+        * @param angleOfViewY the vertical viewing angle in degrees.
         * @sa setParent(), setAngleOfViewY() */
       explicit Camera(const GLWidget *parent = 0, double angleOfViewY = 40.0);
       /** The destructor. */
@@ -91,10 +94,10 @@ namespace Avogadro {
         * @sa setParent() */
       const GLWidget *parent() const;
       /** Sets the vertical viewing angle.
-        * @param angleOfViewY the new vertical viewing angle, in degrees.
+        * @param angleOfViewY the new vertical viewing angle in degrees.
         * @sa angleOfViewY() */
       void setAngleOfViewY(double angleOfViewY);
-      /** @return the vertical viewing angle, in degrees.
+      /** @return the vertical viewing angle in degrees.
         * @sa setAngleOfViewY() */
       double angleOfViewY() const;
       /** Sets 4x4 "modelview" matrix representing the camera orientation and position.
@@ -109,7 +112,7 @@ namespace Avogadro {
         *         the camera orientation and position
         * @sa setModelview(), const Eigen::MatrixP3d & modelview() const */
       Eigen::MatrixP3d & modelview();
-      /** Calls gluPerspective() with parameters automatically suitably chosen
+      /** Calls gluPerspective() with parameters automatically chosen
         * for rendering the GLWidget's molecule with this camera. Should be called
         * only in GL_PROJECTION matrix mode. Example code is given
         * in the class's comment.
@@ -122,7 +125,7 @@ namespace Avogadro {
         * @sa applyPerspective(), initializeViewPoint()
         */
       void applyModelview() const;
-      /** Sets up the camera so that it gives a nice view on the molecule loaded in the
+      /** Sets up the camera so that it gives a nice view of the molecule loaded in the
         * parent GLWidget. Typically you would call this method right after loading a molecule.
         * @sa applyPerspective(), applyModelview()
         */
@@ -134,9 +137,9 @@ namespace Avogadro {
         * @endcode
         */
       const double distance(const Eigen::Vector3d & point) const;
-      /** Multiply the camera's "modelview" matrix on the right by the translation of given
-        * vector. Because the translation is applied on the right, the vector is understood in
-        * the molecule's coordinate system. Use this method if you want to make the impression that the molecule is moving while the camera remains fixed. This is the
+      /** Multiply the camera's "modelview" matrix on the right by the translation of the given
+        * vector. As the translation is applied on the right, the vector is understood in
+        * the molecule's coordinate system. Use this method if you want to give the impression that the molecule is moving while the camera remains fixed. This is the
         * equivalent of the OpenGL function glTranslate().
         * @param vector the translation vector
         * @sa pretranslate(), translationVector()*/
@@ -144,15 +147,15 @@ namespace Avogadro {
       /** Multiply the camera's "modelview" matrix on the left by the translation of given
         * vector. Because the translation is applied on the left, the vector is understood in
         * the coordinate system obtained by applying the camera's matrix to the molecule's
-        * coordinate system. Use this method if you want to make the impression that the camera
-        * is moving while the molecule remains fixed. This is NOT the
-        * equivalent of the OpenGL function glTranslate().
+        * coordinate system. Use this method if you want to give the impression that the camera
+        * is moving while the molecule remains fixed.
+        * @warning This is NOT the equivalent of the OpenGL function glTranslate().
         * @param vector the translation vector
         * @sa translate(), translationVector()*/
       void pretranslate(const Eigen::Vector3d &vector);
-      /** Multiply the camera's "modelview" matrix on the right by the rotation of given
-        * angle and axis. Because the rotation is applied on the right, the axis vector is
-        * understood in the molecule's coordinate system. Use this method if you want to make
+      /** Multiply the camera's "modelview" matrix on the right by the rotation of the given
+        * angle and axis. As the rotation is applied on the right, the axis vector is
+        * understood in the molecule's coordinate system. Use this method if you want to give
         * the impression that the molecule is rotating while the camera remains fixed. This is the
         * equivalent of the OpenGL function glRotate(), except that here the angle is expressed
         * in radians, not in degrees.
@@ -160,22 +163,22 @@ namespace Avogadro {
         * After the rotation is multiplied, a normalization is performed to ensure that the
         * camera matrix remains sane.
         *
-        * @param angle the rotation angle, expressed in radians
+        * @param angle the rotation angle in radians
         * @param axis a unit vector around which to rotate. This MUST be a unit vector, i.e.
         *             axis.norm() must be close to 1.
         * @sa prerotate()*/
       void rotate(const double &angle, const Eigen::Vector3d &axis);
-      /** Multiply the camera's "modelview" matrix on the left by the rotation of given
+      /** Multiply the camera's "modelview" matrix on the left by the rotation of the given
         * angle and axis. Because the rotation is applied on the left, the axis vector is
         * understood in the the coordinate system obtained by applying the camera's matrix to
-        * the molecule's coordinate system. Use this method if you want to make
-        * the impression that the camera is rotating while the molecule remains fixed. This is
-        * NOT the equivalent of the OpenGL function glRotate().
+        * the molecule's coordinate system. Use this method if you want to give
+        * the impression that the camera is rotating while the molecule remains fixed.
         *
         * After the rotation is multiplied, a normalization is performed to ensure that the
         * camera matrix remains sane.
         *
-        * @param angle the rotation angle, expressed in radians
+        * @warning This is NOT the equivalent of the OpenGL function glRotate().
+        * @param angle the rotation angle in radians
         * @param axis a unit vector around which to rotate. This MUST be a unit vector, i.e.
         *             axis.norm() must be close to 1.
         * @sa prerotate()*/
@@ -187,7 +190,7 @@ namespace Avogadro {
        *          Thus v.x() and v.y() are the x and y coords of the pixel to unproject.
        *          v.z() represents it's "z-distance". If you don't know what value to
        *          put in v.z(), see the other unProject(const QPoint&) method.
-       * @return vector containing the unprojected space coordinates
+       * @return vector of the unprojected space coordinates
        *
        * @sa unProject(const QPoint&), project()
        */
@@ -196,11 +199,11 @@ namespace Avogadro {
       /**
        * Performs an unprojection from window coordinates to space coordinates,
        * into the plane passing through a given reference point and parallel to the screen.
-       * Thus the returned vector is a point belonging to that plane. The rationale is that
+       * Thus the returned vector is a point of that plane. The rationale is that
        * when unprojecting 2D window coords to 3D space coords, there are a priori
-       * infinitely many solutions, and one has to choose one. This is equivalent to
+       * infinitely many solutions, and one has to be choose. This is equivalent to
        * choosing a plane parallel to the screen.
-       * @param p the point to unproject, expressed in window coordinates
+       * @param p the point to unproject, expressed in window coordinates.
        * @param ref the reference point, determining the plane into which to unproject.
        *            If you don't know what to put here, see the other
        *            unProject(const QPoint&) method.
@@ -217,8 +220,8 @@ namespace Avogadro {
        * @code
          unProject( p, center() );
        * @endcode
-       * @param p the point to unproject, expressed in window coordinates
-       * @return vector containing the unprojected space coordinates
+       * @param p the point to unproject, expressed in window coordinates.
+       * @return vector containing the unprojected space coordinates.
        *
        * @sa unProject(const Eigen::Vector3d&),
        *     unProject(const QPoint&, const Eigen::Vector3d&), project()
@@ -228,7 +231,7 @@ namespace Avogadro {
       /**
        * Performs a projection from space coordinates to window coordinates.
        * @param v the vector to project, expressed in space coordinates.
-       * @return vector containing the projected screen coordinates
+       * @return vector containing the projected screen coordinates.
        *
        * @sa unProject(const Eigen::Vector3d&), unProject(const QPoint&),
        *     unProject(const QPoint&, const Eigen::Vector3d&)
